--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -29,7 +29,7 @@
 
                 {% block navbar %}
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span>Filters</span>
+                        <span>Leden</span>
                     </h6>
 
                     <ul class="nav flex-column">
@@ -46,25 +46,55 @@
                                 </a>
                             </li>
                         {% endfor %}
+
+                        {% if perms.LedenAdministratie.change_lid %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'lid_create' %}">
+                                    <span data-feather="user-plus"></span>Nieuw Lid
+                                </a>
+                            </li>
+                        {% endif %}
                     </ul>
                 {% endblock %}
 
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span>Navigatie</span>
+                    <span>Facturen</span>
+                </h6>
+
+               <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="plus-circle"></span>Aanmaken
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="mail"></span>Versturen
+                        </a>
+                    </li>
+               </ul>
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Overig</span>
                 </h6>
 
                 <ul class="nav flex-column">
-                    {% if perms.LedenAdministratie.change_lid %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'lid_create' %}">
-                                <span data-feather="user-plus"></span>Nieuw Lid
-                            </a>
-                        </li>
-                    {% endif %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'export' %}">
-                        <span data-feather="file-text"></span>Excel Export</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="calendar"></span>Todo lijst
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'export' %}">
+                            <span data-feather="file-text"></span>Excel Export</a>
+                    </li>
+
                     {% if request.user.is_superuser %}
-                        <li><a class="nav-link" href="/admin/"><span data-feather="users"></span>Gebruikers</a></li>
+                    <li>
+                        <a class="nav-link" href="/admin/">
+                            <span data-feather="users"></span>Gebruikers</a>
+                    </li>
                     {% endif %}
                 </ul>
 
